--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.4.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/me.paulschwarz/spring-dotenv -->
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
